fix footer and navbar spacing

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-  padding-top: 55px;
+  padding-top: 45px;
 }
 
 #wrap {
@@ -29,10 +29,9 @@ body {
 #footer {
   text-align: center;
   font-size: 12px;
-  margin: 0;
-  padding:0;
+  padding-top: 40px;
+  padding-bottom: 40px;
   height: 50px;
-  background-color: black;
 }
 
 // Navbar
